# dataplatform-sharedlibs.archetype

./: README.md  archetype.rhai
contents/base/{{ project-name }}/: pyproject.toml
contents/package/{{ project-name }}/src/{{ project_name }}/{{ package_name }}/nax/data/shared-libs/drivers/: pyproject.toml
contents/package/{{ project-name }}/src/{{ project_name }}/{{ package_name }}/nax/data/shared-libs/drivers/talkwalker/: talkwalkerdriver.py
