[tool.poetry]
name = "talkwalker-drivers"
version = "0.1.0"
description = "package for talkwalker-drivers module"
authors = ["nachappa-ponnappa"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.34.51"
fake-useragent = "^1.4.0"
requests = "^2.31.0"
python-dotenv = "^1.0.1"
newspaper3k = "^0.2.8"
watchtower = "^3.0.1"
Flask = "^3.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
